--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,20 @@
 h1{
-  color:red;
+  color:blue;
+  text-align:center;
 }
 
 body{
   background-color:turquoise;
-  
+
+}
+
+
+#Login{
+  background-color:black;
+  color:white;
+  width:39px;
+  text-align:center;
+  padding:7px;
+  position:absolute;
+  right:20px;
 }
